歌单列表及利用observers监听数据变化

--- a/components/playlist/playlist.wxml
+++ b/components/playlist/playlist.wxml
@@ -1,2 +1,5 @@
-<!--components/playlist/playlist.wxml-->
-<text>components/playlist/playlist.wxml</text>
+<view class="playlist-container">
+  <image src="{{playlist.picUrl}}" class="playlist-img"></image>
+  <text class="playlist-playcount">{{_count}}</text>
+  <view class="playlist-name">{{playlist.name}}</view>
+</view>
