播放器页面实现背景图片和标题显示歌曲名称

--- a/pages/player/player.wxml
+++ b/pages/player/player.wxml
@@ -1,2 +1,2 @@
-<!--pages/player/player.wxml-->
-<text>pages/player/player.wxml</text>
+<view class="player-container" style="background:url({{picUrl}}) center/cover no-repeat"></view>
+<view class="player-mask"></view>
