--- a/pages/player/player.wxml
+++ b/pages/player/player.wxml
@@ -10,7 +10,7 @@
   <!-- 控制面板 -->
   <view class="control">
     <text class="iconfont icon-shangyishoushangyige" bind:tap="onPrev"></text>
-    <text class="iconfont {{isPlaying?'icon-zanting1':'icon-bofang1'}}" bind:tap="togglePlaying"></text>
+    <text class="iconfont {{isPlaying?'icon-zanting1':'icon-bofang1'}}" bindtap="togglePlaying"></text>
     <text class="iconfont icon-xiayigexiayishou" bind:tap="onNext"></text>
   </view>
 </view>
