暂停、上一首、下一首

--- a/pages/player/player.wxml
+++ b/pages/player/player.wxml
@@ -9,8 +9,8 @@
 
   <!-- 控制面板 -->
   <view class="control">
-    <text class="iconfont icon-shangyishoushangyige" bind:tap="onPrev"></text>
+    <text class="iconfont icon-shangyishoushangyige" bindtap="onPrev"></text>
     <text class="iconfont {{isPlaying?'icon-zanting1':'icon-bofang1'}}" bindtap="togglePlaying"></text>
-    <text class="iconfont icon-xiayigexiayishou" bind:tap="onNext"></text>
+    <text class="iconfont icon-xiayigexiayishou" bindtap="onNext"></text>
   </view>
 </view>
