新增进度条组件

--- a/pages/player/player.wxml
+++ b/pages/player/player.wxml
@@ -7,6 +7,11 @@
     <image class="player-img rotation {{isPlaying?'':'rotation-paused'}}" src="{{picUrl}}"></image>
   </view>
 
+   <!-- 进度条 -->
+   <view class="progress-bar">
+    <x-progress-bar />
+  </view>
+
   <!-- 控制面板 -->
   <view class="control">
     <text class="iconfont icon-shangyishoushangyige" bindtap="onPrev"></text>
