--- a/pages/player/player.wxml
+++ b/pages/player/player.wxml
@@ -7,9 +7,10 @@
     <image class="player-img rotation {{isPlaying?'':'rotation-paused'}}" src="{{picUrl}}"></image>
   </view>
 
-   <!-- 进度条 -->
-   <view class="progress-bar">
-    <x-progress-bar />
+  <!-- 进度条 -->
+  <view class="progress-bar">
+    <x-progress-bar bind:musicEnd="onNext" bind:timeUpdate="timeUpdate" bind:musicPlay="onPlay"
+      bind:musicPause="onPause" isSame="{{isSame}}" />
   </view>
 
   <!-- 控制面板 -->
