--- a/components/lyric/lyric.wxml
+++ b/components/lyric/lyric.wxml
@@ -1,3 +1,7 @@
-<scroll-view hidden="{{isLyricShow}}">
-  歌词
+<scroll-view hidden="{{isLyricShow}}" class="lyric-scroll" scroll-y scroll-top="{{scrollTop}}" scroll-with-animation="true">
+  <view class="lyric-panel">
+    <block wx:for="{{lrcList}}" wx:key="item">
+      <view class="lyric {{index==nowLyricIndex?'hightlight-lyric': ''}}">{{item.lrc}}</view>
+    </block>
+  </view>
 </scroll-view>
