--- a/pages/blog/blog.wxml
+++ b/pages/blog/blog.wxml
@@ -11,4 +11,7 @@
       <x-search iconfont="iconfont" icon-sousuo="icon-sousuo" />
     </view>
   </view>
+
+  <!-- 底部弹出层 -->
+  <x-bottom-modal modalShow="{{modalShow}}" />
 </view>
