--- a/components/bottom-modal/bottom-modal.wxml
+++ b/components/bottom-modal/bottom-modal.wxml
@@ -3,6 +3,6 @@
   <view class="panel">
     <i class="iconfont icon-shanchu1" bindtap="onClose"></i>
     <!-- slot插槽  具名插槽-->
-    <!-- <slot name="modal-content"></slot> -->
+    <slot name="modal-content"></slot>
   </view>
 </view>
