--- a/pages/blog/blog.wxml
+++ b/pages/blog/blog.wxml
@@ -13,5 +13,10 @@
   </view>
 
   <!-- 底部弹出层 -->
-  <x-bottom-modal modalShow="{{modalShow}}" />
+  <!-- <x-bottom-modal modalShow="{{modalShow}}" /> -->
+  <x-login
+    modalShow="{{modalShow}}"
+    bind:loginsuccess="onLoginSuccess"
+    bind:loginfail="onLoginFail">
+  </x-login>
 </view>
